--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}"{% if LANGUAGE_BIDI %} dir="rtl"{% endif %}>
 {% load pages_tags mezzanine_tags i18n future staticfiles %}
-{% load cache %}
 
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -114,9 +113,7 @@
 
 {% block middle_wrapper %}
 {% block middle_class %}<div class="col-md-7 middle">{% endblock %}
-    {% cache 300 main %}
     {% block main %}{% endblock %}
-    {% endcache %}
 {% block middle_div %}</div>{% endblock %}
 {% endblock %}
 
@@ -151,7 +148,7 @@
 <p class="site-info text-center">
     {% trans "Powered by" %}
     <a href="{{ site.domain }}abc.com">Mezzanine</a>, 
-    <a href="http://www.djangoproject.com"></a>
+    <a href="http://www.djangoproject.com">Django</a>
     {% ifinstalled cartridge.shop %},
     <a href="http://cartridge.jupo.org">Cartridge</a>{% endifinstalled %}
     {% trans "and" %}
